<resources>
    <string name="app_name">Catalogue Movie Ui Ux</string>
    <string name="nav_header_title">Muhamad Ardiyansyah</string>
    <string name="nav_header_subtitle">ardiyansyahh20@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_home_tab_fragment">HomeTabFragment</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!--for localization-->
    <string name="find_movie">Input Movie Name</string>
    <string name="find">SEARCH</string>
    <string name="find_title">SEARCH MOVIE</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="date_release">Date Release</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="upcoming">UPCOMING</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="findmovie">Find Movie</string>
    <string name="vote">Vote : %s</string>
    <string name="rating">Rating : %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movieTitle">Movie Title</string>
    <string name="movieOverview">Overview</string>
    <string name="releaseDate">Release Date</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="image_movie">Image Movie</string>
    <string name="detail">detail</string>
    <string name="preference">Preference</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="dialog_exit"> Do you want exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="datakosong">No data yet.</string>
    <string name="addFav">Added to your Favorite list</string>
    <string name="delFav">Deleted from your Favorite list</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notifications</string>
    <string name="detail_daily_reminder">Turn on the daily reminder to get notifications at 7 AM</string>
    <string name="release_reminder">Turn on the Movie Release reminder to get notifications at 8 AM</string>
    <string name="change_language">Change Language</string>
    <string name="localization">Localization</string>
    <string name="daily_message">check movie guys</string>
    <string name="movie_release_reminder">Turn on movie release reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_movie">%s release now, keep watch it</string>
    <string name="key_reminder_daily">Reminder Daily</string>
    <string name="key_reminder_release">Reminder Release</string>
    <string name="reminder_release">Release Reminder</string>
    <string name="key_language">key_language</string>
    <string name="select_language">Select Language</string>
    <string name="movie_daily_reminder">Turn On daily Reminder</string>
</resources>