<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_daily"
            android:title="@string/daily_reminder"
            android:summary="@string/detail_daily_reminder"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_release"
            android:title="@string/reminder_release"
            android:summary="@string/release_reminder"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/localization">
        <Preference
            android:key="@string/key_language"
            android:summary="@string/select_language"
            android:title="@string/change_language">

        </Preference>


    </PreferenceCategory>
</PreferenceScreen>